--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
     <meta http-equiv="refresh" content="7; url='https://craterlake.notion.site/craterlake/5cd5a559d6754662814242f29f667b9c'" />
   </head>
   <body>
-    <p>Please follow <a href="https://www.w3docs.com">this link</a>.</p>
+    <p>Redirecting failed? Try <a href="https://craterlake.notion.site/craterlake/5cd5a559d6754662814242f29f667b9c">this link</a>.</p>
   </body>
 </html>
