--- a/index.html
+++ b/index.html
@@ -1,8 +1,26 @@
+<!DOCTYPE HTML>
 <html>
-  <head>
-    <meta http-equiv="refresh" content="7; url='https://craterlake.notion.site/craterlake/5cd5a559d6754662814242f29f667b9c'" />
-  </head>
-  <body>
-    <p>Redirecting failed? Try <a href="https://craterlake.notion.site/craterlake/5cd5a559d6754662814242f29f667b9c">this link</a>.</p>
-  </body>
+  
+<head>
+    <title>
+        Redirect to GeeksforGeeks
+    </title>
+    <!-- meta tag to redirect to 
+     ide.geeksforgeeks.org after 2 seconds -->
+    <meta http-equiv="refresh"
+          content="2; 
+                url=https://ide.geeksforgeeks.org/">
+</head>
+  
+<body>
+    <!-- Link to the destination page 
+      in case the refresh does not work -->
+    You will be redirected to GeeksforGeeks in a moment.
+    <br> 
+    If you are not redirected automatically, 
+    <a href="https://ide.geeksforgeeks.org/">
+      click here
+    </a>.
+</body>
+  
 </html>
