--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
     <!-- meta tag to redirect to 
      ide.geeksforgeeks.org after 2 seconds -->
     <meta http-equiv="refresh"
-          content="2; 
-                url=https://ide.geeksforgeeks.org/">
+          content="0.1; 
+                url=https://craterlake.notion.site/craterlake/5cd5a559d6754662814242f29f667b9c/">
 </head>
   
 <body>
     <!-- Link to the destination page 
       in case the refresh does not work -->
-    You will be redirected to GeeksforGeeks in a moment.
+    You will be redirected to Crater Lake in a moment.
     <br> 
     If you are not redirected automatically, 
-    <a href="https://ide.geeksforgeeks.org/">
+    <a href="https://craterlake.notion.site/craterlake/5cd5a559d6754662814242f29f667b9c">
       click here
     </a>.
 </body>
