--- a/index.html
+++ b/index.html
@@ -2,15 +2,12 @@
 <html>
 <head>
     <meta http-equiv="refresh"
-          content="0.1; 
+          content="0; 
                 url=https://craterlake.notion.site/craterlake/5cd5a559d6754662814242f29f667b9c/">
 </head>
 <body>
-    You will be redirected to Crater Lake in a moment.
-    <br> 
-    If you are not redirected automatically, 
     <a href="https://craterlake.notion.site/craterlake/5cd5a559d6754662814242f29f667b9c">
-      click here
-    </a>.
+      Not redirecting? Click here.
+    </a>
 </body>
 </html>
