--- a/report/index.html
+++ b/report/index.html
@@ -2,15 +2,12 @@
 <html>
 <head>
     <meta http-equiv="refresh"
-          content="0.1; 
+          content="0; 
                 url=https://craterlake.notion.site/craterlake/625ecc39617547e28eb5431c1519d4c5">
 </head>
 <body>
-    You will be redirected to Crater Lake Reporting Portal in a moment.
-    <br> 
-    If you are not redirected automatically, 
     <a href="https://craterlake.notion.site/craterlake/625ecc39617547e28eb5431c1519d4c5">
-      click here
-    </a>.
+      Not redirecting? Click here.
+    </a>
 </body>
 </html>
