--- a/feedback/index.html
+++ b/feedback/index.html
@@ -2,15 +2,12 @@
 <html>
 <head>
     <meta http-equiv="refresh"
-          content="0.1; 
+          content="0; 
                 url=https://docs.google.com/forms/d/e/1FAIpQLScfWb-jO6e6h1lP3VAsGSbEHRzkbsSa1gw1TEFZj8wvXLMypg/viewform?usp=sf_link">
 </head>
 <body>
-    You will be redirected to Crater Lake Feedback form in a moment.
-    <br> 
-    If you are not redirected automatically, 
     <a href="https://docs.google.com/forms/d/e/1FAIpQLScfWb-jO6e6h1lP3VAsGSbEHRzkbsSa1gw1TEFZj8wvXLMypg/viewform?usp=sf_link">
-      click here
-    </a>.
+      Not redirecting? Click here.
+    </a>
 </body>
 </html>
