--- a/beta/index.html
+++ b/beta/index.html
@@ -6,11 +6,8 @@
                 url=https://www.notion.so/craterlake/0df145b119eb409a9b32df97cfe251ef">
 </head>
 <body>
-    You will be redirected to Crater Lake Beta portal in a moment.
-    <br> 
-    If you are not redirected automatically, 
     <a href="https://www.notion.so/craterlake/0df145b119eb409a9b32df97cfe251ef">
-      click here
-    </a>.
+      Not redirecting? Click here.
+    </a>
 </body>
 </html>
