--- a/appeal/index.html
+++ b/appeal/index.html
@@ -2,15 +2,12 @@
 <html>
 <head>
     <meta http-equiv="refresh"
-          content="0.1; 
+          content="0; 
                 url=https://craterlake.notion.site/Appeals-cad4320f1ddf452998b80a27c8d0812f">
 </head>
 <body>
-    You will be redirected to Crater Lake appeals portal in a moment.
-    <br> 
-    If you are not redirected automatically, 
     <a href="https://craterlake.notion.site/Appeals-cad4320f1ddf452998b80a27c8d0812f">
-      click here
-    </a>.
+      Not redirecting? Click here.
+    </a>
 </body>
 </html>
